--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,8 +6,20 @@ website:
   title: "Quarto Template"
   navbar:
     right:
-      - href: index.qmd
-        text: Home
+      - href: index.qmd#group-info
+        text: Group Information
+      - href: index.qmd#introduction
+        text: Introduction
+      - href: index.qmd#installation-and-setup
+        text: Installation and Setup
+      - href: index.qmd#key-features
+        text: Key Features
+      - href: index.qmd#use-cases
+        text: Use Cases
+      - href: index.qmd#conclusion
+        text: Conclusion
+      - href: index.qmd#references
+        text: References
 
 
 format:
