--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,11 +6,11 @@ website:
   title: "Quarto Template"
   navbar:
     right:
-      - href: index.qmd#group-info
-        text: Group Information
-      - href: index.qmd#introduction
+      - href: index.qmd#Title
+        text: Title
+      - href: index.qmd#Introduction
         text: Introduction
-      - href: index.qmd#installation-and-setup
+      - href: index.qmd#Installation-Setup
         text: Installation and Setup
       - href: index.qmd#key-features
         text: Key Features
