--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,14 +12,18 @@ website:
         text: Introduction
       - href: index.qmd#Installation-Setup
         text: Installation and Setup
-      - href: index.qmd#key-features
-        text: Key Features
-      - href: index.qmd#use-cases
+      - href: index.qmd#Key-Features-Explanation
+        text: Key Features and explanation
+      - href: index.qmd#Code-Examples
+        text: Code Examples
+      - href: index.qmd#Screenshots
+        text: Screenshots
+      - href: index.qmd#Use-Cases
         text: Use Cases
-      - href: index.qmd#conclusion
+        - href: index.qmd#Conclusion
         text: Conclusion
-      - href: index.qmd#references
-        text: References
+        - href: index.qmd#References-Further-Reading
+        text: References Further Reading
 
 
 format:
